--- a/cursoUCDM2.html
+++ b/cursoUCDM2.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-TW0W96T3JG"></script>
+      <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+          gtag('config', 'G-TW0W96T3JG');
+          gtag('config', 'UA-207568054-1');
+      </script>
 	<title>Bio Neuro Nutrición : : Un Curso de Milagros Estudiantes avanzados.</title>
 
     <!-- Open Graph-->
@@ -46,10 +55,13 @@
  <section id="PortadaUCDM2" class="hero-wrap hero-wrap-2" >
   <div class="overlay"></div>
   <div class="container">
-    <div class="row no-gutters slider-text align-items-end justify-content-center">
+    <div id="titleMain" class="row no-gutters slider-text align-items-end justify-content-center">
       <div class="col-md-9 ftco-animate pb-5 text-center">
        <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="fa fa-chevron-right"></i></a></span> <span class="mr-2"><a href="index.html">Cursos <i class="fa fa-chevron-right"></i></a></span> <span>UCDM 2 <i class="fa fa-chevron-right"></i></span></p>
        <h1 id="pageTitle" class="mb-0 bread"></h1>
+       <div id="learnMore">
+        <button class="btn btn-outline-light mt-3"><a href="#cont">Saber más</a></button>
+      </div>
      </div>
    </div>
  </div>
@@ -76,7 +88,7 @@
       </div>
       <div class="col-md-8 d-flex align-items-center">
         <div class="staff-detail w-100 pl-md-5">
-          <h3>Un Curso de Milagros. Estudiantes avanzados.</h3>
+          <h3 id="cont">Un Curso de Milagros. Estudiantes avanzados.</h3>
           <h4>Este curso está dirigido a estudiantes que ya han hecho el nivel inicial, el <a href="./cursoUCDM1.html">UCDM nivel 1</a>, que se encuentran familiarizados con el lenguaje, las premisas del Libro UCDM.</h4>
           <p>
             El propósito del curso es interiorizar los temas del libro, profundizando, analizando y practicando, siempre en búsqueda de la Paz.
