--- a/cursoNeuroNut.html
+++ b/cursoNeuroNut.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-TW0W96T3JG"></script>
+      <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+          gtag('config', 'G-TW0W96T3JG');
+          gtag('config', 'UA-207568054-1');
+      </script>
 	<title>Bio Neuro Nutricion : : Creando un Nuevo Sendero 1</title>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-207568054-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-
-    gtag('config', 'UA-207568054-1');
-  </script>
-
-
   <!-- Open Graph-->
   <meta property="og:title" content="Bio Neuro Nutrición : : Creando un Nuevo Sendero 1">
   <meta property="og:site_name" content="Bio Neuro Nutrición : : UCDM">
@@ -62,6 +60,9 @@
       <div class="col-md-9 ftco-animate pb-5 text-center">
        <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="fa fa-chevron-right"></i></a></span> <span class="mr-2"><a href="course.html">Cursos <i class="fa fa-chevron-right"></i></a></span> <span>Bio Neuro Nutrición<i class="fa fa-chevron-right"></i></span></p>
        <h1 id="pageTitle" class="mb-0 bread"></h1>
+       <div id="learnMore">
+         <button class="btn btn-outline-light mt-3"><a href="#cont">Saber más</a></button>
+       </div>
      </div>
    </div>
  </div>
@@ -88,7 +89,7 @@
       </div>
       <div class="col-md-8 d-flex align-items-center">
         <div class="staff-detail w-100 pl-md-5">
-          <h3>Qué es Creando un Nuevo Sendero 1</h3>
+          <h3 id="cont">Qué es Creando un Nuevo Sendero 1</h3>
           <p>
           <h4>Nutrición y Espiritualidad.<br>
             Ser feliz cambiando mi Templo.</h4>
