--- a/cursoUCDM1.html
+++ b/cursoUCDM1.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-TW0W96T3JG"></script>
+      <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+          gtag('config', 'G-TW0W96T3JG');
+          gtag('config', 'UA-207568054-1');
+      </script>
 	<title>Bio Neuro Nutrición : : UCDM un curso de milagros NIVEL 1</title>
   <!-- Open Graph-->
   <meta property="og:title" content="Bio Neuro Nutrición : : Un Curso de Milagros 1">
@@ -49,6 +58,9 @@
       <div class="col-md-9 ftco-animate pb-5 text-center">
        <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="fa fa-chevron-right"></i></a></span> <span class="mr-2"><a href="index.html">Cursos <i class="fa fa-chevron-right"></i></a></span> <span>UCDM 1 <i class="fa fa-chevron-right"></i></span></p>
        <h1 id="pageTitle" class="mb-0 bread"></h1>
+       <div id="learnMore">
+        <button class="btn btn-outline-light mt-3"><a href="#cont">Saber más</a></button>
+      </div>
      </div>
    </div>
  </div>
@@ -75,7 +87,7 @@
       </div>
       <div class="col-md-8 d-flex align-items-center">
         <div class="staff-detail w-100 pl-md-5">
-          <h3>Qué es Un Curso de Milagros 1</h3>
+          <h3 id="cont">Qué es Un Curso de Milagros 1</h3>
           <p>
           <h4>Es un curso 100% espiritual. Es un recurso de aprendizaje.<br>
             Es Entrenamiento Mental.</h4>
