--- a/index.html
+++ b/index.html
@@ -99,11 +99,17 @@
                     <p class="mb-0"><a href="./course.html" class="btn btn-primary">Nuestros Cursos</a>
                         
                                     <!-- <a href="./about.html" class="btn btn-white">Saber más</a></p> -->
+                    <div>
+                        <div data-mc-src="94d342d1-1bcc-4edd-9ec2-a868a82eb421#instagram" class="col-12"></div>
+                        <script src="https://cdn2.woxo.tech/a.js#618d3336827f5a0016d84b38" async data-usrc>
+                        </script>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 
+    
     <section class="ftco-section ftco-no-pb ftco-no-pt">
         <div class="container">
             <div class="row">
