--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <div class="col-md-5 order-md-last" style="margin-top: -10em;">
                     <div class="login-wrap p-4 p-md-5">
                         <!--IG feeds-->
-                        <div>
+                        <div class="mb-3">
                             <div data-mc-src="94d342d1-1bcc-4edd-9ec2-a868a82eb421#instagram" class="col-12"></div>
                             <script src="https://cdn2.woxo.tech/a.js#618d3336827f5a0016d84b38" async data-usrc>
                             </script>
