actualizacion de fechas

--- a/index.html
+++ b/index.html
@@ -384,6 +384,7 @@
     <script src="./js/class/comentarios.js"></script>
     <script src="./js/class/post.js"></script>
     <script src="./js/forms.js"></script>
+    <script src="./js/instagramPostController.js"></script>
 
     <script>
         crearCursoDestacado(contUCDM1)
